# ffe

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: anon-ibm.md  details.md  how-to-write-a-python-package.md  mimi.md  quick-start.md  usage.md
examples/: ffe-config.toml
examples/swap/: file11.txt  swap.toml
recipes/: anon-ibm-gitee.toml  anon-ibm.toml  anon.py  common_ibm.py  ibm-delete.py  ibm-upload.py  ibm.py  mimi.py  move-new-files.py  one-way-sync.py  recipes-gitee.toml  recipes.toml  rename-part.py  requirements.txt  swap.py  tar-xz.py
src/ffe/: __init__.py  __main__.py  main.py  model.py  util.py
temp/: mnf.toml  temp1.toml  temp2.toml
