[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ffe"
authors = [{name = "ahui", email = "102419@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "toml",
  "tomli",
  "click",
  "appdirs",
  "requests"
]
requires-python = ">=3.10" # because using TypedDict(v3.8) and Pattern Match(v3.10) 
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ahui2016/ffe"

[project.scripts]
ffe = "ffe.main:cli"
