[metadata]
name = ffe
version = 0.0.1
author = ahui
author_email = 102419@gmail.com
description = ffe: File/Folder Extensible manipulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahui2016/ffe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.7
packages = find:

[options.packages.find]
where = src
